# for display continuity sake please use 2 spaces instead of tabs

2014-11-15 mmichaud <m.michael.michaud@orange.fr>
  * Small improvements in the AttributeQueryPlugIn
    + add isEmpty, dimension and numHoles attributes
    + add matches operator (using regex)
    + add case insensitive option

2014-11-11 ede
  * PLUS: update JumpDBQuery to 1.1.0 including new 3.8.6 SQLite JDBC driver

2014-11-08 mmichaud <m.michael.michaud@orange.fr>
  * Improve LineStringSegmentStyles readability by removing symbols from
    very small features and from segments very close to each others

2014-11-06 mmichaud <m.michael.michaud@orange.fr>
  * Fix a problem in BeanShellAttributeCalculator with date attribute type

2014-10-20 ede
  * replaced error dialog in PasteItemPlugin's EnableCheck with warning in
    statusbar, the dialog disrupted the activation of the context menu
    containing the plugin

2014-10-20 ede
  * fix JML (GML/FME etc.) reader/writer did not properly read/write UTF-8

2014-10-09 mmichaud <m.michael.michaud@orange.fr>
  * fix #376, #377 : kml driver is working again (plus edition)

2014-10-07 mmichaud <m.michael.michaud@orange.fr>
  * Add an option to save to postgis driver to convert NaN Z values to
    valid Z (requested by mail from Uwe on 2014-10-01/06)
  * Patch RasterImageLayer according to Alberto de Luca patch sent by
    mail on 2014-10-06

2014-10-05 mmichaud <m.michael.michaud@orange.fr>
  * Add 3 plugins for macro recording (needs adaptation in each plugin
    to work effectively).
  * Make the following plugins recordable within a macro
    - BufferPlugIn
    - DisposeSelectedPlugIn
    - RemoveSelectedPlugIn
    - ViewSchemaPlugIn
    - DataSourceFileLayerLoader

2014-09-24 mmichaud <m.michael.michaud@orange.fr>
  * PostGISWriter : improve error handling

2014-09-23 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug in DataStoreTransactionManager : LayerListener could be added
    several times for the same Task in some circumstances